log
Thu 28 Mar 2024 08:46:17 PM UTC: 
 tests:  0|6
total_score: 0/70
e61aa01
Thu 28 Mar 2024 08:57:57 PM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  1|5
total_score: 10/70
03373f1
Thu 28 Mar 2024 09:07:12 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
e7bc02f
Thu 28 Mar 2024 09:09:43 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 15/70
0d84c5f
Thu 28 Mar 2024 09:11:44 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
   60 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
58d77e0
Thu 28 Mar 2024 09:13:16 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
59fe68f
Thu 28 Mar 2024 09:14:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
657300f
Thu 28 Mar 2024 09:30:48 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  5|4
total_score: 25/70
14ffaf6
Thu 28 Mar 2024 09:32:00 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
cf5a288
Thu 28 Mar 2024 09:42:16 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:76:68: error: lvalue required as left operand of assignment
   76 |   if (list == NULL || list->current == NULL || list->current->prev = NULL)
      |                                                                    ^
Compilation failed
555391a
Thu 28 Mar 2024 09:42:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
7e8b4b1
Fri 29 Mar 2024 01:29:48 AM UTC: 
 list.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:98:36: error: implicit declaration of function ‘size_of’ [-Werror=implicit-function-declaration]
   98 |   Node* nuevoNodo = (Node *)malloc(size_of(Node));
      |                                    ^~~~~~~
list.c:98:44: error: expected expression before ‘Node’
   98 |   Node* nuevoNodo = (Node *)malloc(size_of(Node));
      |                                            ^~~~
cc1: all warnings being treated as errors
Compilation failed
bf0f510
Fri 29 Mar 2024 01:30:25 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
3b5d20e
Fri 29 Mar 2024 01:45:28 AM UTC: 
 list.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  10|2
total_score: 45/70
8f3ea33
